# conkeldurr

./: .gitignore  README.md  Taskfile.yml  bun.lockb  conkeldurr.opam  dune-project  package.json  timburr.opam
.github/workflows/: lint-and-test-workflow.yml
examples/: basic_program_test.sexp  example1.csv  example2.csv  example_csv.csv  example_input.sexp  example_input.tin  example_output.ts  file-name.ts
examples/events/: events.csv  events.sexp  events.ts
examples/food/: food.sexp  menu.csv  menu.ts  suppliers.csv  suppliers.ts
examples/ticks/: ticks.csv  ticks.sexp  ticks.ts
lib/: ast.ml  ast.mli  debug.ml  dune  entry.ml  entry.mli  example.ml  exceptions.ml  header.ml  header.mli  import.ml  import.mli  interpret_ir.ml  interpreter.ml  interpreter.mli  io.ml  io.mli  line_scanner.ml  literal.ml  literal.mli  parse_ir.ml  program.ml  program.mli  read_csv_spreadsheet.ml  read_files.ml  record.ml  record.mli  spreadsheet.ml  spreadsheet.mli  store.ml  store.mli  types.ml  util.ml  util.mli  validate_ir.ml  variable.ml  variable.mli  write_ts.ml
test/: README.md  dune  example_compare_output.ts  helper.ml  sample_test_suite.ml  unit_test_timburr.ml
test/expect_tests/: ast_tests.ml  basic_program_tests.ml  dune  end_to_end_program_tests.ml  header_tests.ml  import_tests.ml  interpreter_tests.ml  literal_tests.ml  parse_header_tests.ml  parse_record_tests.ml  program_tests.ml  record_json_tests.ml  record_tests.ml  sample.ml  spreadsheet_parser_tests.ml  spreadsheet_tests.ml  store_tests.ml
test/expect_tests/cases/: basic_program_test.sexp  chdir_program_test.sexp  enum_program_test.sexp  fail_dupe_import.sexp  fail_dupe_interface.sexp  fail_dupe_sheet_name.sexp  fail_dupe_variable.sexp  long_program_test.sexp  (+1 more)
(+7 files in other folders)
